[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Casey <caseyjohnsonwv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
openai = "^1.40.6"
uvicorn = "^0.30.5"
python-dotenv = "^1.0.1"
tiktoken = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
